<resources>
    <string name="app_name">CareService</string>
    <string name="login">login</string>
    <string name="datakendaraan">Mohon isi keterangan kendaraan kamu dibawah ini</string>
    <string name="logout">Hallo Terimakasih sudah mencoba aplikasi kami!</string>
    <string name="gmail">Care-Service</string>
    <string name="hallo">Hallo...</string>
    <string name="linkemail">CareService@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
    <string name="onsite">Service On Site</string>
    <string name="emergency">Emergency</string>
    <string name="imformasi">Artikel</string>
    <string name="pesan_keluar">Anda yakin ingin Keluar dari Aplikasi ini?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="btnartikel">Baca Artikel</string>
    <string name="lihat">Lokasi Dealer</string>
    <string name="masuk">Masuk</string>

    <string name="head1">Detail Artikel</string>
    <string name="line1">Ketahui! 5 Gejala Kanvas Kopling Mobil Kamu Habis</string>
    <string name="topik1">31 Jul 2022 | 11:00 WIB
...
