<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/artikel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewartikel"
...
